--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,81 @@
+/* 
+color palette
+
+cream -- #FDF8F1
+yellow -- #FFE486
+blue -- #C4DDF6
+light pink -- #FEEFE8
+pink -- #FACDCC
+black
+
+*/
+
 /* styles apply to App.jsx */
+body {
+  background-image: url(./assets/background-image.png);
+  background-repeat: auto;
+  font-family: "Poppins", sans-serif;
+}
 
+/* fonts */
+.font-link {
+  font-family: "Poppins", sans-serif;
+  font-family: "Space Mono", monospace;
+}
 
+.card-title {
+  font-family: "Space Mono", monospace;
+  font-weight: 700;
+  font-size: 1.6rem;
+}
 
+p {
+  font-weight: 400;
+  font-size: 1.2rem;
+}
 
+/* hidden spans */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
 
 /* styles apply to NavBar.jsx */
+
+
+
+/* --- overrides bootstrap styles --- */
+
+/* project card buttons */
+
+.btn-primary {
+  border-radius: 30px;
+  border: 1px black solid;
+  background-color: #93c9ff;
+}
+
+.btn-primary:hover {
+  border: none;
+  background-color: #3c98f4;
+}
+
+.btn-danger {
+  border: none;
+  background-color: #FDF8F1;
+}
+
+.btn-danger:hover {
+  background-color: red;
+}
+
+/* project card text */
+
+.card-title {
+
+}
