--- a/client/src/App.css
+++ b/client/src/App.css
@@ -128,3 +128,25 @@ p {
 }
 
 /* project card text */
+
+
+/* add project and ai feature buttons */
+
+/* button container */
+.ai-add-btns {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+
+.ai-btn {
+  font-size: 1.2rem;
+}
+
+.add-btn {
+  font-size: 1.3rem;
+}
