adds login button to register page and adds styling for login and register buttons

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -268,3 +268,19 @@ p {
   bottom: 20px;
   right: 20px;
 }
+
+/* --- login page --- */
+/* login button */
+
+.login-btn, .register-btn {
+  margin: 10px;
+}
+
+.register-link, .login-link {
+  text-decoration: none;
+  color: black;
+}
+
+.register-link:hover, .register-btn:hover, .login-link:hover{
+  color: white;
+}
