adds hover effect to project cards

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -187,7 +187,12 @@ p {
 .trash-icon:hover {
   color: white;
 }
-                    
+            
+/* project card */
+#project-card:hover {
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  transform: translateY(-5px);
+}
 
 /* --- add project and ai feature buttons --- */
 
